--- a/res/layout/list_report.xml
+++ b/res/layout/list_report.xml
@@ -14,7 +14,7 @@
 
         <LinearLayout
 	        android:id="@+id/statusLayout"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_alignParentTop="true"
@@ -29,10 +29,12 @@
 
 	        <TextView
 	            android:id="@+id/senderTextView"
-	            android:layout_width="wrap_content"
+	            android:layout_width="match_parent"
 	            android:layout_height="20dp"
 	            android:layout_marginLeft="6dp"
-	            android:gravity="center"
+	            android:layout_marginRight="6dp"
+	            android:ellipsize="end"
+	            android:singleLine="true"
 	            android:textColor="@color/font_major_dark"
 	            android:textSize="14sp" />
 	        
