--- a/res/layout/activity_start_sign_in.xml
+++ b/res/layout/activity_start_sign_in.xml
@@ -57,16 +57,16 @@
 
     <EditText
         android:id="@+id/passwordEditText"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/usernameEditText"
-        android:layout_alignRight="@+id/usernameEditText"
         android:layout_below="@+id/signInDivider"
         android:layout_marginTop="12dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:hint="@string/input_password"
         android:inputType="textPassword"
         android:textColor="@color/font_major_light"
-        android:textColorHint="@color/hint_white" 
+        android:textColorHint="@color/hint_white"
         android:background="@null"
         android:textCursorDrawable="@null" />
 
