--- a/res/layout/list_comment.xml
+++ b/res/layout/list_comment.xml
@@ -43,6 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:paddingBottom="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="16dp" >
 
