--- a/res/layout/mc_item_chatdetail_right.xml
+++ b/res/layout/mc_item_chatdetail_right.xml
@@ -20,7 +20,7 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="5dp"
             android:indeterminate="false"
-            android:indeterminateDrawable="@anim/mc_loading"
+            android:indeterminateDrawable="@anim/loading"
             android:visibility="gone" />
 
         <TextView
@@ -34,7 +34,8 @@
             android:singleLine="false"
             android:text="hellodewfrefre"
             android:textColor="@color/mc_chat_text"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:visibility="gone" />
 
         <RelativeLayout
             android:id="@+id/content_pic_rl"
@@ -48,7 +49,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:focusable="true"
-                android:maxWidth="130dp" />
+                android:maxHeight="105dp"
+                android:maxWidth="105dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -60,19 +62,41 @@
                 android:background="@drawable/mc_bg_msg_image_right" />
         </RelativeLayout>
 
-        <TextView
-            android:id="@+id/content_voice"
+        <RelativeLayout
+            android:id="@+id/content_voice_rl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/progress_bar"
-            android:background="@drawable/mc_bg_message_right"
-            android:gravity="center"
-            android:maxWidth="270dp"
-            android:singleLine="false"
-            android:text="7s"
-            android:textColor="@color/mc_chat_text"
-            android:textSize="16sp"
-            android:visibility="gone" />
+            android:layout_toRightOf="@id/progress_bar" >
+
+            <TextView
+                android:id="@+id/content_voice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/mc_bg_message_right"
+                android:gravity="center"
+                android:maxWidth="270dp"
+                android:singleLine="false"
+                android:text="         7s"
+                android:textColor="@color/mc_chat_text"
+                android:textSize="16sp"
+                android:visibility="visible" />
+
+            <com.mechat.mechatlibrary.custom.RoundProgressBar
+                android:id="@+id/mc_play_progressbar"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="6dp" />
+
+            <ImageView
+                android:id="@+id/pic_voice"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_alignLeft="@id/content_voice"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="7dp"
+                android:background="@drawable/mc_voice_play" />
+        </RelativeLayout>
     </RelativeLayout>
 
     <ImageView
