--- a/res/layout/mc_zoom_image_activity.xml
+++ b/res/layout/mc_zoom_image_activity.xml
@@ -12,6 +12,23 @@
         android:scaleType="center" />
 
     <RelativeLayout
+        android:id="@+id/save_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="30dp"
+        android:background="@drawable/mc_save_bg" >
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerInParent="true"
+            android:background="@drawable/mc_save_nor" />
+    </RelativeLayout>
+
+    <RelativeLayout
         android:id="@+id/chat_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
