--- a/res/values/mc_strings.xml
+++ b/res/values/mc_strings.xml
@@ -16,5 +16,22 @@
     <string name="mc_allocate_us">正在分配客服...</string>
     <string name="mc_leave_msg_tip">客服已离线，现在转入留言模式</string>
     <string name="mc_photo_not_support">当前设置不支持发送图片</string>
+    <string name="mc_save_pic_suc">保存成功\n图片已经保存到</string>
+    <string name="mc_save_pic_failed">图片保存失败</string>
+    <string name="mc_no_sdcard">SD卡不存在</string>
+    <string name="mc_record_not_support">当前手机不支持录音</string>
+    <string name="mc_record_up_and_cancel">上滑，取消发送</string>
+    <string name="mc_record_cancel">取消发送</string>
+    <string name="mc_record_download_start">开始下载语音文件...</string>
+    <string name="mc_record_download_suc">下载成功</string>
+    <string name="mc_record_download_failed">下载失败，请重试</string>
+    <string name="mc_record_no_permission">没有录音权限，请重试</string>
+    <string name="mc_record_record_time_is_short">录音时间太短</string>
+    <string name="mc_allocating_agent">正在分配客服...</string>
+    <string name="mc_no_agent_online">当前没有客服在线</string>
+    <string name="mc_record_count_down">还可以再说 %1$d 秒</string>
+    <string name="mc_formattersStr">M月d日</string>
+    <string name="mc_today">今天</string>
+    <string name="mc_tomorrow">昨天</string>
 
 </resources>
