--- a/res/layout/grid_gallery.xml
+++ b/res/layout/grid_gallery.xml
@@ -1,12 +1,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:padding="2dp" >
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" >
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="100dp"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_centerInParent="true"
         android:contentDescription="@string/image"
@@ -17,8 +16,8 @@
         android:id="@+id/checkImageView"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_alignTop="@+id/imageView"
-        android:layout_alignRight="@+id/imageView"
+		android:layout_alignParentTop="true"
+		android:layout_alignParentRight="true"
         android:layout_marginTop="5dp"
         android:layout_marginRight="5dp"
         android:contentDescription="@string/check"
