--- a/res/layout/activity_image.xml
+++ b/res/layout/activity_image.xml
@@ -7,7 +7,7 @@
 
     <uk.co.senab.photoview.PhotoView
         android:id="@+id/photoView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:contentDescription="@string/image" />
 
