--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -59,40 +59,16 @@
                 reim:text_color_selected="@color/tab_item_selected"
                 reim:text_size="10sp" />
 
-			<TextView
-			    android:id="@+id/shortBadgeTextView"
-			    android:layout_width="20dp"
-			    android:layout_height="20dp"
+			<ImageView
+			    android:id="@+id/reportTipImageView"
+			    android:layout_width="10dp"
+			    android:layout_height="10dp"
 				android:layout_alignTop="@+id/tabItemReport"
 				android:layout_alignRight="@+id/tabItemReport"
-				android:layout_marginRight="10dp"
-				android:gravity="center"
-				android:textColor="@android:color/white"
-				android:background="@drawable/badge_short"
-				android:visibility="gone" />
-
-			<TextView
-			    android:id="@+id/mediumBadgeTextView"
-			    android:layout_width="30dp"
-			    android:layout_height="20dp"
-				android:layout_alignTop="@+id/tabItemReport"
-				android:layout_alignRight="@+id/tabItemReport"
-				android:layout_marginRight="5dp"
-				android:gravity="center"
-				android:textColor="@android:color/white"
-				android:background="@drawable/badge_medium"
-				android:visibility="gone" />
-		
-			<TextView
-			    android:id="@+id/longBadgeTextView"
-			    android:layout_width="40dp"
-			    android:layout_height="20dp"
-				android:layout_alignTop="@+id/tabItemReport"
-				android:layout_alignRight="@+id/tabItemReport"
-				android:gravity="center"
-				android:text="@string/report_over_flow"
-				android:textColor="@android:color/white"
-				android:background="@drawable/badge_long"
+				android:layout_marginTop="3dp"
+				android:layout_marginRight="12dp"
+				android:contentDescription="@string/tip"
+				android:background="@drawable/tip_dark"
 				android:visibility="gone" />
 
         </RelativeLayout>
@@ -144,7 +120,7 @@
                 reim:text_size="10sp" />
 
 			<ImageView
-			    android:id="@+id/tipImageView"
+			    android:id="@+id/meTipImageView"
 			    android:layout_width="10dp"
 			    android:layout_height="10dp"
 				android:layout_alignTop="@+id/tabItemMe"
@@ -152,7 +128,7 @@
 				android:layout_marginTop="3dp"
 				android:layout_marginRight="12dp"
 				android:contentDescription="@string/tip"
-				android:background="@drawable/tip"
+				android:background="@drawable/tip_dark"
 				android:visibility="gone" />
 
         </RelativeLayout>
