--- a/res/layout/fragment_reim.xml
+++ b/res/layout/fragment_reim.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
-    android:orientation="vertical"
-    android:id="@+id/containerLayout" >
+    android:background="@color/background" >
 
     <RelativeLayout
+        android:id="@+id/titleLayout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/major_dark" >
@@ -48,6 +47,32 @@
         android:id="@+id/itemListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:cacheColorHint="#00000000" />
+        android:layout_below="@+id/titleLayout"
+        android:cacheColorHint="#00000000" >
+    </classes.widget.XListView>
 
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/noResultLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" >
+
+        <ImageView
+            android:id="@+id/noResultImageView"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+			android:layout_centerHorizontal="true"
+            android:contentDescription="@string/no_filter_result"
+            android:src="@drawable/no_result" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/noResultImageView"
+            android:layout_marginTop="5dp"
+            android:text="@string/no_filter_result"
+            android:textColor="@color/hint_light_grey" />
+    </RelativeLayout>
+
+</RelativeLayout>
