--- a/res/layout/list_report_detail.xml
+++ b/res/layout/list_report_detail.xml
@@ -24,6 +24,9 @@
 	            android:id="@+id/titleTextView"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
+	            android:layout_alignParentLeft="true"
+	            android:layout_toLeftOf="@+id/statusTextView"
+	            android:layout_marginRight="14dp"
 	            android:textColor="@color/font_major_dark"
 	            android:textSize="20sp" />
 
@@ -31,7 +34,7 @@
 	            android:id="@+id/statusTextView"
 	            android:layout_width="36dp"
 	            android:layout_height="20dp"
-				android:layout_centerVertical="true"
+				android:layout_marginTop="4dp"
 				android:layout_alignParentRight="true"
 	            android:gravity="center"
 	            android:textColor="@color/major_light" />
