--- a/res/layout/activity_report_edit.xml
+++ b/res/layout/activity_report_edit.xml
@@ -118,8 +118,7 @@
 				        android:layout_alignParentRight="true"
 				        android:text="@string/approve_info_hint"
 				        android:textColor="@color/major_dark"
-				        android:textSize="14sp"
-			    		android:visibility="invisible" />
+				        android:textSize="14sp" />
 				    
 			    </RelativeLayout>
 			
