--- a/res/layout/list_approve_info.xml
+++ b/res/layout/list_approve_info.xml
@@ -114,7 +114,7 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="6dp"
             android:contentDescription="@string/alarm"
-            android:src="@drawable/alarm_drawable" />
+            android:src="@drawable/alarm_enabled_drawable" />
 
         <include
             android:layout_width="match_parent"
