--- a/res/layout/fragment_reim.xml
+++ b/res/layout/fragment_reim.xml
@@ -48,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/titleLayout"
-        android:cacheColorHint="#00000000" >
+        android:cacheColorHint="@android:color/transparent" >
     </classes.widget.XListView>
 
     <RelativeLayout
