--- a/res/layout/fragment_report.xml
+++ b/res/layout/fragment_report.xml
@@ -78,7 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/titleLayout"
-        android:cacheColorHint="#00000000" />
+        android:cacheColorHint="@android:color/transparent" />
 
     <RelativeLayout
         android:id="@+id/noResultLayout"
