--- a/res/layout/view_statistics.xml
+++ b/res/layout/view_statistics.xml
@@ -67,6 +67,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp" >
 
         <RelativeLayout
