--- a/res/layout/window_reim_filter.xml
+++ b/res/layout/window_reim_filter.xml
@@ -78,24 +78,16 @@
 		    	android:orientation="horizontal" >
 		
 		        <RadioButton
-		            android:id="@+id/sortNullRadio"
+		            android:id="@+id/sortConsumedDateRadio"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:layout_weight="1"
 		            android:checked="true"
-		            android:text="@string/sort_null"
+		            android:text="@string/sort_consumed_date"
 		            style="@style/RadioButton" />
 		
 		        <RadioButton
 		            android:id="@+id/sortAmountRadio"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:layout_weight="1"
-		            android:text="@string/sort_item_count"
-		            style="@style/RadioButton" />
-		
-		        <RadioButton
-		            android:id="@+id/sortConsumedDateRadio"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:layout_weight="1"
