--- a/res/layout/window_reim_time.xml
+++ b/res/layout/window_reim_time.xml
@@ -36,10 +36,24 @@
 		android:layout_height="0.5dp"
 	  	layout="@layout/view_divider"/>
 
-	<DatePicker
-	    android:id="@+id/datePicker"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent" 
-        android:calendarViewShown="false"/>
+	<LinearLayout
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:orientation="horizontal"
+	    android:layout_gravity="center_horizontal" >
+
+	    <DatePicker
+	        android:id="@+id/datePicker"
+	        android:layout_width="wrap_content"
+	        android:layout_height="match_parent"
+	        android:calendarViewShown="false" />
+
+	    <TimePicker
+	        android:id="@+id/timePicker"
+	        android:layout_width="wrap_content"
+	        android:layout_height="match_parent"
+	        android:layout_marginLeft="15dp" />
+	    
+	</LinearLayout>
 
 </LinearLayout>
