--- a/res/layout/activity_me_edit_category.xml
+++ b/res/layout/activity_me_edit_category.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/background" >
+    android:background="@color/background"
+    android:id="@+id/baseLayout" >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -154,7 +155,6 @@
 			        android:layout_width="wrap_content"
 			        android:layout_height="wrap_content"
 			        android:layout_gravity="center_vertical"
-			        android:layout_marginTop="2dp"
 			        android:layout_marginLeft="6dp"
 		            android:layout_marginRight="16dp"
 			        android:text="@string/rmb"
