--- a/res/layout/activity_report_cc.xml
+++ b/res/layout/activity_report_cc.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/choose_category"
+            android:text="@string/choose_cc"
             android:textColor="@color/major_light"
             android:textSize="20sp" />
 
@@ -43,11 +43,10 @@
 
     </RelativeLayout>
     
-    <ExpandableListView
-        android:id="@+id/categoryListView"
+    <ListView
+        android:id="@+id/ccListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:listSelector="@drawable/list_item_drawable" >
-    </ExpandableListView>
+        android:listSelector="@drawable/list_item_drawable" />
 
 </LinearLayout>
