--- a/res/layout/grid_report_tag.xml
+++ b/res/layout/grid_report_tag.xml
@@ -1,8 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/statusTextView"
-    android:gravity="center" >
+    android:layout_height="wrap_content" >
+    
+	<TextView
+	    android:id="@+id/statusTextView"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:paddingTop="5dp"
+	    android:paddingBottom="5dp"
+	    android:gravity="center"
+	    android:textColor="@color/major_light" />
 
-</TextView>
+	<RelativeLayout
+	    android:id="@+id/coverLayout"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+		android:background="@drawable/report_tag_cover" />
+
+</FrameLayout>
