--- a/res/layout/view_statistics.xml
+++ b/res/layout/view_statistics.xml
@@ -5,188 +5,227 @@
     android:orientation="vertical" >
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="36dp"
-        android:layout_marginRight="36dp"
+        android:layout_width="286dp"
+        android:layout_height="245dp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="36dp" >
 
         <ImageView
             android:id="@+id/arcImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="210dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
             android:contentDescription="@string/statistics"
             android:src="@drawable/arc" />
 
         <FrameLayout
             android:id="@+id/statContainer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-        </FrameLayout>
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp" />
 
         <ImageView
             android:id="@+id/arcCoverImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="210dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
             android:contentDescription="@string/statistics"
             android:src="@drawable/arc_cover" />
+
+        <TextView
+            android:layout_width="140dp"
+            android:layout_height="30dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/statistics_title"
+            android:gravity="center"
+            android:text="@string/last_12_months"
+            android:textColor="@color/font_reim_number"
+            android:textSize="16sp" />
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true" >
 
-            <TextView
-                android:id="@+id/mainPercentTextView"
+            <LinearLayout
+                android:id="@+id/amountLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:textColor="@color/major_dark"
-                android:textSize="50sp" />
+                android:baselineAligned="false" >
+                
+	            <TextView
+	                android:id="@+id/mainAmountTextView"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:textColor="@color/major_dark"
+	                android:textSize="50sp" />
+                
+	            <TextView
+	                android:id="@+id/unitTextView"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:textColor="@color/major_dark"
+	                android:textSize="38sp" />
+	            
+            </LinearLayout>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/mainPercentTextView"
-                android:layout_centerHorizontal="true"
-                android:text="@string/stat_new"
-                android:textColor="@color/hint_grey"
+                android:layout_alignBottom="@+id/amountLayout"
+                android:layout_toRightOf="@+id/amountLayout"
+                android:layout_marginBottom="6dp"
+                android:text="@string/rmb_symbol"
+                android:textColor="@color/major_dark"
                 android:textSize="18sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_toRightOf="@+id/mainPercentTextView"
-                android:text="@string/percent"
-                android:textColor="@color/major_dark"
-                android:textSize="24sp" />
+                android:layout_below="@+id/amountLayout"
+                android:layout_centerHorizontal="true"
+                android:text="@string/new_total"
+                android:textColor="@color/hint_grey"
+                android:textSize="18sp" />
         </RelativeLayout>
     </RelativeLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp" >
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" >
-
-            <ImageView
-                android:id="@+id/markDoneImageView"
-                android:layout_width="14dp"
-                android:layout_height="14dp"
-                android:layout_alignTop="@+id/markDoneTextView"
-                android:layout_marginTop="5dp"
-                android:contentDescription="@string/mark"
-                android:src="@drawable/mark_done" />
-
-            <TextView
-                android:id="@+id/markDoneTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="6dp"
-                android:layout_toRightOf="@+id/markDoneImageView"
-                android:text="@string/stat_done"
-                android:textColor="@color/hint_grey"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/donePercentTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/markDoneImageView"
-                android:layout_alignRight="@+id/markDoneTextView"
-                android:layout_below="@+id/markDoneTextView"
-                android:gravity="right"
-                android:textColor="@color/hint_dark_grey"
-                android:textSize="18sp" />
-        </RelativeLayout>
-
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp" >
+            android:layout_toLeftOf="@+id/pivotView"
+            android:layout_marginRight="8dp"
+            android:orientation="horizontal"
+            android:baselineAligned="false"
+            android:gravity="center_vertical" >
 
-            <ImageView
-                android:id="@+id/markOngoingImageView"
-                android:layout_width="14dp"
-                android:layout_height="14dp"
-                android:layout_alignTop="@+id/markOngoingTextView"
-                android:layout_marginTop="5dp"
-                android:contentDescription="@string/mark"
-                android:src="@drawable/mark_ongoing" />
-
-            <TextView
-                android:id="@+id/markOngoingTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="6dp"
-                android:layout_toRightOf="@+id/markOngoingImageView"
-                android:text="@string/stat_ongoing"
-                android:textColor="@color/hint_grey"
-                android:textSize="16sp" />
+	        <ImageView
+	            android:id="@+id/markOngoingImageView"
+	            android:layout_width="14dp"
+	            android:layout_height="14dp"
+	            android:contentDescription="@string/mark"
+	            android:src="@drawable/mark_ongoing" />
+	
+	        <TextView
+	            android:id="@+id/markOngoingTextView"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_marginLeft="6dp"
+	            android:text="@string/stat_ongoing"
+	            android:textColor="@color/hint_grey"
+	            android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/ongoingPercentTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/markOngoingImageView"
-                android:layout_alignRight="@+id/markOngoingTextView"
-                android:layout_below="@+id/markOngoingTextView"
-                android:gravity="right"
+                android:layout_marginTop="1dp"
+				android:layout_marginLeft="6dp"
                 android:textColor="@color/hint_dark_grey"
                 android:textSize="18sp" />
-        </RelativeLayout>
+            
+        </LinearLayout>
 
-        <RelativeLayout
+        <View
+            android:id="@+id/pivotView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_centerInParent="true" />
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp" >
+            android:layout_toRightOf="@+id/pivotView"
+            android:layout_marginLeft="8dp"
+            android:orientation="horizontal"
+            android:baselineAligned="false"
+            android:gravity="center_vertical" >
 
-            <ImageView
-                android:id="@+id/markNewImageView"
-                android:layout_width="14dp"
-                android:layout_height="14dp"
-                android:layout_alignTop="@+id/markNewTextView"
-                android:layout_marginTop="5dp"
-                android:contentDescription="@string/mark"
-                android:src="@drawable/mark_new" />
-
-            <TextView
-                android:id="@+id/markNewTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="6dp"
-                android:layout_toRightOf="@+id/markNewImageView"
-                android:text="@string/stat_new"
-                android:textColor="@color/hint_grey"
-                android:textSize="16sp" />
+	        <ImageView
+	            android:id="@+id/markNewImageView"
+	            android:layout_width="14dp"
+	            android:layout_height="14dp"
+	            android:contentDescription="@string/mark"
+	            android:src="@drawable/mark_new" />
+	
+	        <TextView
+	            android:id="@+id/markNewTextView"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_marginLeft="6dp"
+	            android:text="@string/stat_new"
+	            android:textColor="@color/hint_grey"
+	            android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/newPercentTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/markNewImageView"
-                android:layout_alignRight="@+id/markNewTextView"
-                android:layout_below="@+id/markNewTextView"
-                android:gravity="right"
+                android:layout_marginTop="1dp"
+				android:layout_marginLeft="6dp"
                 android:textColor="@color/hint_dark_grey"
                 android:textSize="18sp" />
-        </RelativeLayout>
+            
+        </LinearLayout>
+        
+    </RelativeLayout>
+
+    <include
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="30dp"
+        layout="@layout/view_divider" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="24dp"
+        android:orientation="horizontal"
+        android:background="@color/list_item_header" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="16dp"
+            android:text="@string/cost_total"
+            android:textColor="@color/font_list_item_header"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/totalTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="3dp"
+            android:gravity="right|center_vertical"
+            android:text="@string/cost_total"
+            android:textColor="@color/font_list_item_header"
+            android:textSize="12sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="6dp"
+            android:gravity="center_vertical"
+            android:text="@string/rmb_symbol"
+            android:textColor="@color/font_list_item_header"
+            android:textSize="12sp" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/monthCostTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="30dp"
-        android:text="@string/cost_per_month"
-        android:textColor="@color/hint_grey"
-        android:textSize="14sp" />
+    <include
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        layout="@layout/view_divider" />
 
     <LinearLayout
         android:id="@+id/monthLayout"
@@ -198,10 +237,8 @@
     </LinearLayout>
 
     <RelativeLayout
-        android:id="@+id/categoryTitleLayout"
         android:layout_width="match_parent"
         android:layout_height="25dp"
-        android:layout_marginTop="16dp"
         android:background="@color/list_item_header"
         android:orientation="vertical" >
 
