--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -49,13 +49,14 @@
     
     <color name="tag">#FFABABAB</color>
     
+    <color name="status_cover">#992B2D2F</color>
     <color name="status_draft">#FFA17356</color>
     <color name="status_submitted">#FF46A3D3</color>
     <color name="status_approved">#FF3CB798</color>
     <color name="status_rejected">#FFB570B2</color>
     <color name="status_finished">#FFCCCECF</color>
     
-    <color name="stat_done">#FF61686D</color>
+    <color name="stat_title">#FFECD4D5</color>
     <color name="stat_ongoing">#FF45A3D2</color>
     <color name="stat_new">#FFF6575B</color>
         
