--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,6 +16,12 @@
     <style name="AppTheme" parent="AppBaseTheme">
 		<item name="android:typeface">serif</item>
     </style>
+    
+	<style name="AppSplash" parent="android:Theme">
+		<item name="android:windowBackground">@drawable/splash_drawable</item>
+		<item name="android:windowNoTitle">true</item>
+		<item name="android:scaleType">centerInside</item>
+	</style>
 
     <style name="RadioButton">
         <item name="android:textColor">@color/radio_button_text_color</item>
