--- a/res/layout/list_month_stat.xml
+++ b/res/layout/list_month_stat.xml
@@ -7,14 +7,15 @@
 
     <TextView
         android:id="@+id/monthTextView"
-        android:layout_width="50dp"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
 		android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="6dp"
+        android:text="2012-12"
         android:textColor="@color/font_major_dark"
-        android:textSize="12sp" />
+        android:textSize="14sp" />
 
     <LinearLayout
         android:id="@+id/dataLayout"
@@ -27,7 +28,7 @@
 
     <TextView
         android:id="@+id/dataTextView"
-        android:layout_width="64dp"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
 		android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
@@ -35,6 +36,6 @@
         android:layout_marginRight="12dp"
         android:gravity="right"
         android:textColor="@color/font_month_data"
-        android:textSize="12sp" />
+        android:textSize="14sp" />
 
 </RelativeLayout>
