--- a/res/layout/grid_item_tag_unselected.xml
+++ b/res/layout/grid_item_tag_unselected.xml
@@ -3,9 +3,11 @@
     android:layout_width="wrap_content"
     android:layout_height="24dp"
     android:id="@+id/nameTextView"
+    android:paddingTop="2dp"
+    android:paddingBottom="2dp"
     android:paddingLeft="12dp"
     android:paddingRight="12dp"
     android:gravity="center"
     android:background="@drawable/tag_shape_unselected"
 	android:textColor="@color/tag"
-	android:textSize="16sp" />
+	android:textSize="14sp" />
