--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -1,42 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="84dp"
-    android:background="@drawable/list_item_drawable" >
+    android:layout_height="90dp"
+    android:orientation="vertical"
+    android:background="@drawable/list_item_drawable"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp" >
 
     <RelativeLayout
-        android:id="@+id/infoLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/pivotView"
-        android:paddingLeft="16dp" >
+        android:layout_marginTop="7dp" >
 
         <TextView
             android:id="@+id/statusTextView"
-            android:layout_width="36dp"
-            android:layout_height="20dp"
-            android:layout_marginTop="7dp"
-            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:paddingLeft="3dp"
+            android:paddingRight="3dp"
             android:textColor="@color/major_light"
             android:textSize="14sp" />
 
         <TextView
             android:id="@+id/proveTextView"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/statusTextView"
-            android:layout_marginTop="7dp"
             android:layout_marginLeft="6dp"
-	        android:gravity="center"
-	        android:text="@string/status_prove_ahead"
-	        android:textColor="@color/major_light"
-	        android:textSize="14sp"/>
+            android:paddingLeft="1dp"
+            android:paddingRight="1dp"
+            android:text="@string/status_prove_ahead"
+            android:textColor="@color/major_light"
+            android:textSize="14sp" />
+
+        <ImageView
+            android:id="@+id/photoImageView"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_centerVertical="true"
+			android:layout_toLeftOf="@+id/reportTextView"
+            android:contentDescription="@string/invoice"
+            android:src="@drawable/camera" />
+
+        <TextView
+            android:id="@+id/reportTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="5dp"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textColor="@color/hint_light_grey"
+            android:textSize="14sp" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:baselineAligned="false" >
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/proveTextView"
-            android:layout_marginTop="6dp"
+            android:layout_weight="3"
             android:gravity="bottom" >
 
             <TextView
@@ -46,7 +76,7 @@
                 android:ellipsize="end"
                 android:singleLine="true"
                 android:textColor="@color/font_major_dark"
-                android:textSize="24sp" />
+                android:textSize="28sp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -55,70 +85,27 @@
                 android:text="@string/rmb_symbol"
                 android:textColor="@color/hint_black"
                 android:textSize="16sp" />
-
         </LinearLayout>
-        
-    </RelativeLayout>
 
-    <View
-        android:id="@+id/pivotView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_centerInParent="true" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/pivotView"
-        android:orientation="vertical"
-        android:layout_marginRight="16dp" >
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginTop="12dp" >
-
-            <ImageView
-                android:id="@+id/photoImageView"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:layout_centerVertical="true"
-                android:background="@drawable/camera"
-                android:contentDescription="@string/invoice" />
-
-            <TextView
-                android:id="@+id/reportTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="5dp"
-                android:layout_toRightOf="@+id/photoImageView"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:textColor="@color/hint_light_grey"
-                android:textSize="14sp" />
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/vendorTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:gravity="right"
-            android:singleLine="true"
-            android:textColor="@color/font_major_dark"
-            android:textSize="20sp" />
-
-        <ImageView
-            android:id="@+id/categoryImageView"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_gravity="right"
-        	android:layout_marginTop="3dp"
-            android:contentDescription="@string/tag"
-            android:src="@drawable/default_icon" />
-        
+	    <TextView
+	        android:id="@+id/vendorTextView"
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="2"	        
+	        android:gravity="right|center_vertical"
+	        android:ellipsize="end"
+	        android:singleLine="true"
+	        android:textColor="@color/font_major_dark"
+	        android:textSize="20sp" />
     </LinearLayout>
 
-</RelativeLayout>
+    <ImageView
+        android:id="@+id/categoryImageView"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_marginTop="3dp"
+        android:layout_gravity="right"
+        android:contentDescription="@string/tag"
+        android:src="@drawable/default_icon" />   
+
+</LinearLayout>
