--- a/res/layout/list_report.xml
+++ b/res/layout/list_report.xml
@@ -2,81 +2,71 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="84dp"
-    android:orientation="horizontal"
+    android:orientation="vertical"
+    android:background="@drawable/list_item_drawable"
     android:baselineAligned="false"
-    android:background="@drawable/list_item_drawable" >
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp" >
 
-    <RelativeLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="3"
-		android:paddingLeft="16dp" >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:orientation="horizontal" >
 
-        <LinearLayout
-	        android:id="@+id/statusLayout"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/statusTextView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="14dp" >
+            android:gravity="center"
+            android:paddingLeft="3dp"
+            android:paddingRight="3dp"
+            android:textColor="@color/major_light" />
 
-	        <TextView
-	            android:id="@+id/statusTextView"
-	            android:layout_width="36dp"
-	            android:layout_height="20dp"
-	            android:gravity="center"
-	            android:textColor="@color/major_light" />
-
-	        <TextView
-	            android:id="@+id/senderTextView"
-	            android:layout_width="match_parent"
-	            android:layout_height="20dp"
-	            android:layout_marginLeft="6dp"
-	            android:layout_marginRight="6dp"
-	            android:ellipsize="end"
-	            android:singleLine="true"
-	            android:textColor="@color/font_major_dark"
-	            android:textSize="14sp" />
-	        
-        </LinearLayout>
-        
-         <TextView android:id="@+id/titleTextView"    
-            android:layout_width="wrap_content"  
+        <TextView
+            android:id="@+id/senderTextView"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/statusLayout"
-            android:layout_marginTop="6dp"
+            android:layout_weight="1"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
             android:ellipsize="end"
             android:singleLine="true"
-            android:textColor="@color/font_major_dark"  
-            android:textSize="20sp" />  
-            
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="2"
-		android:paddingRight="16dp" >
+            android:textColor="@color/font_major_dark"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/dateTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="16dp"
             android:ellipsize="end"
             android:singleLine="true"
             android:textColor="@color/hint_light_grey"
             android:textSize="14sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp" >
+
+        <TextView
+            android:id="@+id/titleTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textColor="@color/font_major_dark"
+            android:textSize="20sp" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/dateTextView"
-            android:orientation="horizontal"
+            android:layout_weight="2"
+            android:baselineAligned="true"
             android:gravity="right|bottom"
-            android:layout_marginTop="6dp"
-            android:baselineAligned="true" >
+            android:orientation="horizontal" >
 
             <TextView
                 android:id="@+id/amountTextView"
@@ -94,9 +84,8 @@
                 android:text="@string/rmb_symbol"
                 android:textColor="@color/hint_black"
                 android:textSize="14sp" />
-
         </LinearLayout>
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
