--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -5,5 +5,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     
     <dimen name="radio_button_corner_radius">5dp</dimen>
+    <dimen name="status_corner_radius">2dp</dimen>
+    <dimen name="tag_corner_radius">5dp</dimen>
 
 </resources>
