--- a/res/layout/activity_report_edit.xml
+++ b/res/layout/activity_report_edit.xml
@@ -85,10 +85,12 @@
 			
 			        <TextView
 			            android:id="@+id/statusTextView"
-			            android:layout_width="36dp"
-			            android:layout_height="20dp"
-						android:layout_marginTop="4dp"
+			            android:layout_width="wrap_content"
+			            android:layout_height="wrap_content"
 						android:layout_alignParentRight="true"
+						android:layout_marginTop="4dp"
+			            android:paddingLeft="3dp"
+			            android:paddingRight="3dp"
 			            android:gravity="center"
 			            android:textColor="@color/major_light" />
 			
@@ -290,31 +292,53 @@
 		android:layout_height="0.5dp"
 		layout="@layout/view_divider" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="?android:attr/buttonBarStyle" >
+	<RelativeLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content" >
 
-        <Button
-            android:id="@+id/commentButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            style="?android:attr/buttonBarButtonStyle"
-            android:background="@drawable/bar_button_drawable"
-            android:text="@string/message"
-            android:textColor="@color/hint_grey" />
+		<LinearLayout
+		    style="?android:attr/buttonBarStyle"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content" >
 
-        <Button
-            android:id="@+id/submitButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            style="?android:attr/buttonBarButtonStyle"
-            android:background="@drawable/bar_button_drawable"
-            android:text="@string/submit" 
-            android:textColor="@color/start_button_text_color"/>
-        
-    </LinearLayout>
+		    <Button
+		        android:id="@+id/commentButton"
+		        style="?android:attr/buttonBarButtonStyle"
+		        android:layout_width="0dp"
+		        android:layout_height="wrap_content"
+		        android:layout_weight="1"
+		        android:background="@drawable/bar_button_drawable"
+		        android:text="@string/message"
+		        android:textColor="@color/hint_grey" />
+
+		    <Button
+		        android:id="@+id/submitButton"
+		        style="?android:attr/buttonBarButtonStyle"
+		        android:layout_width="0dp"
+		        android:layout_height="wrap_content"
+		        android:layout_weight="1"
+		        android:background="@drawable/bar_button_drawable"
+		        android:text="@string/submit"
+		        android:textColor="@color/start_button_text_color" />
+		</LinearLayout>
+
+		<ImageView
+		    android:id="@+id/commentTipImageView"
+		    android:layout_width="10dp"
+		    android:layout_height="10dp"
+			android:layout_toLeftOf="@+id/pivotView"
+			android:layout_marginTop="10dp"
+			android:layout_marginRight="30dp"
+			android:contentDescription="@string/tip"
+			android:background="@drawable/tip_dark"
+			android:visibility="gone" />
+
+		<View
+		    android:id="@+id/pivotView"
+		    android:layout_width="0dp"
+		    android:layout_height="0dp"
+		    android:layout_centerInParent="true" />
+
+		</RelativeLayout>
 
 </LinearLayout>
